	  or other memories where the string data cannot be accessed by simply de-referencing
	  a string pointer.
	* arch/sim/src/up_romgetc.c: Used to test the basic logic to access strings
	  without directly de-referencing a string pointer.
	* arch/avr/src/avr/up_romget.c: Used to access strings that lie in the first
	  64Kb of FLASH (But I still haven't figured out how to get strings to reside in
	  FLASH without using the PROGMEM attribute).
	* configs/teensy/src/up_spi.c: Correct reading of SD CD and WP pins (was reading
	  the wrong register.  AVR SPI now appears to be functional.
	* arch/avr/src/at90usb/at90usb_usbdev.c: Correct USB initialization.  Interrupts
	  were being enabled BEFORE the interrupt handler was attached.
	* configs/sure-pic32mx:  Add a configuration for the Sure Electronics, "Advanced USB
	  Storage Demo Board," Model DB-DP11215 (http://www.sureelectronics.net/goods.php?id=1168).
	  This board features the MicroChip PIC32MX440F512H MCU. (Untested on initial
	  check-in).
	* configs/stm3210e-eval/nsh2:  Add another NSH configuration for the STM32 with
	  some different properties.
	* CONFIG_NSH_CONDEV:  Add a configuration option to allow using a different character
	  device (such a a different UART) for the NSH interface.  This allows, for example,
	  debug output to come from the console device while using another device for NSH.
	  There are some issues on initial check-in:  NuttX doesn't have termios and the
	  console device has special properties that make using NSH awkward.  Examples:
	  No CR-LF expansion, no character echoing, no command line editting.
	* arch/arm/src/stm32/stm32_lowputc.c and stm32_serial.c.  Correct severl bugs
	  involving serial port configuration.  These bugs are only critical if you
	  are trying to using multiple UARTs on STM32.
	* configs/stm3210e-eval/src/up_lcd.c:  Add a driver for the STM3210E-EVAL's LCD.
	* configs/stm3210e-eval/nx:  Add NX configuration for the STM3210E-EVAL.