@@ -83,7 +83,7 @@
 #define GPIO_BTN_WAKEUP (GPIO_INPUT|GPIO_CNF_INFLOAT|GPIO_MODE_INPUT|\
                          GPIO_PORTA|GPIO_PIN0)
 #define GPIO_BTN_TAMPER (GPIO_INPUT|GPIO_CNF_INFLOAT|GPIO_MODE_INPUT|\
-                         GPIO_PORTA|GPIO_PIN0)
+                         GPIO_PORTC|GPIO_PIN13)
 #define GPIO_BTN_KEY    (GPIO_INPUT|GPIO_CNF_INFLOAT|GPIO_MODE_INPUT|\
                          GPIO_EXTI|GPIO_PORTG|GPIO_PIN8)
 #define GPIO_JOY_SEL    (GPIO_INPUT|GPIO_CNF_INFLOAT|GPIO_MODE_INPUT|\
